--- a/app/templates/_parts/header/testLaunch.html.twig
+++ b/app/templates/_parts/header/testLaunch.html.twig
@@ -3,23 +3,23 @@
     <nav class="navbar navbar-expand-md navbar-light">
         <div class="container">
 
-            <a class="navbar-brand" href="#">
-
                 {% if data.brand.logo is defined and data.brand.logo is not null %}
-                    <div
-                        class="header-brand-logo"
-                    >
-                        <img
-                            class="h-100"
-                            src="{{ absolute_url(asset(data.brand.logo, 'img')) }}"
-                            alt="icon"
+                    <a class="navbar-brand" href="#">
+                        <div
+                            class="header-brand-logo"
                         >
-                    </div>
+                            <img
+                                class="h-100"
+                                src="{{ absolute_url(asset(data.brand.logo, 'img')) }}"
+                                alt="icon"
+                            >
+                        </div>
+                    </a>
                 {% else %}
-                    {{ data.brand.text }}
+                    <a class="navbar-brand" href="#">
+                        {{ data.brand.text }}
+                    </a>
                 {% endif %}
-
-            </a>
 
             <button
                 class="navbar-toggler"
@@ -34,20 +34,24 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    {% for key, el in data.navigation %}
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{{ el }}">{{ key }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
+                {% if data.navigation|length > 0 %}
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        {% for key, el in data.navigation %}
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#{{ key }}">{{ el }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
 
-                <a
-                    href="{{ data.callToActionButton.link }}"
-                    class="btn btn-primary rounded-5 btn-goto-payment ms-auto"
-                >
-                    {{ data.callToActionButton.text }}
-                </a>
+                {% if data.callToActionButton.text is defined %}
+                    <a
+                        href="{{ data.callToActionButton.link }}"
+                        class="btn btn-primary rounded-5 btn-goto-payment ms-auto"
+                    >
+                        {{ data.callToActionButton.text }}
+                    </a>
+                {% endif %}
 
             </div>
 
