--- a/app/templates/_parts/features/testLaunch.html.twig
+++ b/app/templates/_parts/features/testLaunch.html.twig
@@ -12,17 +12,21 @@
         <div class="row">
 
             {% for feature in data.items %}
-                <div class="col-md-4">
-                    <div class="feature-icon mb-3">
-                        <img
-                            class="img-fluid"
-                            src="{{ absolute_url(asset( feature.thumb, 'img')) }}"
-                            alt="icon"
-                        >
+                {% if feature.head is not null and feature.description is not null %}
+                    <div class="col-md-4">
+                        {% if feature.thumb is defined and feature.thumb is not null %}
+                            <div class="feature-icon mb-3">
+                                <img
+                                    class="img-fluid"
+                                    src="{{ absolute_url(asset( feature.thumb, 'img')) }}"
+                                    alt="icon"
+                                >
+                            </div>
+                        {% endif %}
+                        <h4>{{ feature.head }}</h4>
+                        <p>{{ feature.description }}</p>
                     </div>
-                    <h4>{{ feature.head }}</h4>
-                    <p>{{ feature.description }}</p>
-                </div>
+                {% endif %}
             {% endfor %}
 
         </div>
