--- a/app/templates/_parts/testimonial/testLaunchCarousel.html.twig
+++ b/app/templates/_parts/testimonial/testLaunchCarousel.html.twig
@@ -36,7 +36,7 @@
                     <div class="container">
                         <div class="testimonial carousel-caption">
                             <img
-                                src="{{ absolute_url(asset( item.thumb, 'img')) }}"
+                                src="{{ absolute_url(asset( item.media, 'img')) }}"
                                 alt="{{ item.head }}"
                                 class="rounded-circle mb-3"
                             >
