--- a/app/templates/_parts/features/testLaunch.html.twig
+++ b/app/templates/_parts/features/testLaunch.html.twig
@@ -14,11 +14,11 @@
             {% for feature in data.items %}
                 {% if feature.head is not null and feature.description is not null %}
                     <div class="col-md-4">
-                        {% if feature.thumb is defined and feature.thumb is not null %}
+                        {% if feature.media.id is defined and feature.media.id is not null %}
                             <div class="feature-icon mb-3">
                                 <img
                                     class="img-fluid"
-                                    src="{{ absolute_url(asset( feature.thumb, 'img')) }}"
+                                    src="{{ absolute_url(asset( feature.media.id, 'img')) }}"
                                     alt="icon"
                                 >
                             </div>
