--- a/app/templates/_parts/newsletter/testLaunch.html.twig
+++ b/app/templates/_parts/newsletter/testLaunch.html.twig
@@ -1,10 +1,10 @@
 <!-- Newsletter Section -->
-<section id="contact" class="newsletter">
+<section id="newsletter" class="newsletter">
     <div class="container">
         <h2>{{ data.head }}</h2>
         <p>{{ data.description }}</p>
         <form class="d-flex justify-content-center mt-4">
-            <input type="email" class="form-control w-50 rounded-5" placeholder="{{ data.inputPlaceholder }}">
+            <input type="email" class="form-control w-50 rounded-5" placeholder="{{ data.inputFieldPlaceholder }}">
 
             <button class="btn btn-primary ms-2 rounded-5">{{ data.callToActionButton.text }}</button>
 
