--- a/app/templates/_parts/hero/testLaunch.html.twig
+++ b/app/templates/_parts/hero/testLaunch.html.twig
@@ -27,12 +27,22 @@
 
             {% if data.media.id is defined and data.media.id is not null %}
                 <div class="col-10 col-sm-8 col-lg-6 d-none d-md-block">
-                    <img
-                        src="{{ absolute_url(asset( data.media.id , 'img')) }}"
-                        class="d-block mx-lg-auto img-fluid"
-                        alt="creativity"
-                        loading="lazy"
-                    >
+
+                    {% if data.media.content is defined and data.media.content is not null %}
+                        <img
+                            src="data:{{ data.media.mimeType }};base64,{{ data.media.content }}"
+                            class="d-block mx-lg-auto img-fluid"
+                            alt="creativity"
+                            loading="lazy"
+                        >
+                    {% else %}
+                        <img
+                            src="{{ absolute_url(path('app_media_show', {'media': data.media.id})) }}"
+                            class="d-block mx-lg-auto img-fluid"
+                            alt="creativity"
+                            loading="lazy"
+                        >
+                    {% endif %}
                 </div>
             {% endif %}
 
