--- a/app/templates/control-panel/variant/builder/index.html.twig
+++ b/app/templates/control-panel/variant/builder/index.html.twig
@@ -51,6 +51,7 @@
 
                     <div class="d-flex flex-row justify-content-between  mt-3">
                         {{ form_row(builderForm.cancelBtn) }}
+                        {{ form_row(builderForm.backBtn) }}
                         {{ form_row(builderForm.saveBtn) }}
                         {{ form_row(builderForm.previewBtn) }}
                     </div>
