--- a/app/templates/_parts/header/testLaunch.html.twig
+++ b/app/templates/_parts/header/testLaunch.html.twig
@@ -8,10 +8,10 @@
                         <div
                             class="header-brand-logo"
                         >
-                            {% if data.brand.media.src is defined and data.brand.media.src is not null %}
+                            {% if data.brand.media.content is defined and data.brand.media.content is not null %}
                                 <img
                                     class="h-100"
-                                    src="{{ data.brand.media.src }}"
+                                    src="data:{{ data.brand.media.mimeType }};base64,{{ data.brand.media.content }}"
                                     alt="icon"
                                 >
                             {% else %}
