--- a/app/templates/control-panel/project/add.html.twig
+++ b/app/templates/control-panel/project/add.html.twig
@@ -6,6 +6,7 @@
     <div class="container pt-5 ">
 
         <div class="row gx-5 justify-content-center">
+            {% include 'control-panel/project/prompt-for-ai-usage.html.twig' %}
             <div class="col-md-8 col-lg-5">
                 {{ form(projectAddForm, {'method': 'POST'}) }}
             </div>
