--- a/app/templates/control-panel/variant/show.html.twig
+++ b/app/templates/control-panel/variant/show.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <div class="min-vh-100 pt-5">
+    <div class="min-vh-100 pt-5 pb-5">
         <div class="container pt-5 ">
             <div class="row gx-5 justify-content-center">
 
@@ -65,6 +65,19 @@
                                 {{ variant.weight }}
                             </li>
                         {% endif %}
+
+                        {% if variant.meta is not null %}
+                            <li class="list-group-item">
+                                <div class="fw-bold">
+                                    Meta
+                                </div>
+                                <pre class=" w-100">
+                                    <code class="language-json">
+                                        {{ variant.meta|json_encode }}
+                                    </code>
+                                </pre>
+                            </li>
+                        {% endif %}
                     </ul>
 
                     <div class="m-1">
@@ -74,6 +87,15 @@
                             title="edit"
                         >
                             <svg class="bi bi-08"><use xlink:href="#pen-fill"/></svg>
+                        </a>
+
+
+                        <a
+                            class="btn btn-primary rounded-5"
+                            href="{{ absolute_url(path('cp_variant_builder', {variant: variant.id})) }}"
+                            title="view"
+                        >
+                            <svg class="bi bi-08"><use xlink:href="#building-fill"/></svg>
                         </a>
                     </div>
 
