--- a/app/templates/control-panel/index.html.twig
+++ b/app/templates/control-panel/index.html.twig
@@ -19,3 +19,9 @@
         </div>
     </div>
 {% endblock %}
+
+{% block footer %}
+    <div id="footer" class="footer pt-5">
+
+    </div>
+{% endblock %}
