--- a/app/templates/control-panel/project/prompt-for-ai-usage.html.twig
+++ b/app/templates/control-panel/project/prompt-for-ai-usage.html.twig
@@ -1,6 +1,12 @@
 <div class="col-md-4 col-lg-4">
-    <h2>How Can I Use ChatGPT Effectively?</h2>
+    <h2>How Can I Use AI Helper Effectively?</h2>
     <p>
-        To use ChatGPT effectively, provide as much information as possible about the product or service you want to promote, including its features and benefits. Include details such as call-to-action visuals, customer testimonials, and any additional offers in our prompt templates. You should also be clear about your goals for the page so that you can get the most detailed and optimized landing page that resonates with your target audience.
+        To use AI helper effectively,
+        provide as much information as possible about the product or service you want to promote,
+        including its features and benefits.
+        Include details such as call-to-action visuals, customer testimonials,
+        and any additional offers in our prompt templates.
+        You should also be clear about your goals for the page so that you can
+        get the most detailed and optimized landing page that resonates with your target audience.
     </p>
 </div>
