--- a/app/templates/control-panel/project/add.html.twig
+++ b/app/templates/control-panel/project/add.html.twig
@@ -8,18 +8,7 @@
         <div class="row gx-5 justify-content-center">
             {% include 'control-panel/project/prompt-for-ai-usage.html.twig' %}
             <div class="col-md-8 col-lg-8">
-                {{ form(projectAddForm, {'method': 'POST'}) }}
-
-
-{#                {{ form_start(projectAddForm, {'method': 'POST'}) }}#}
-
-
-{#                {{ form_row(projectAddForm.features, {'label' : false}) }}#}
-
-{#                {{ form_row(builderForm.previewBtn) }}#}
-
-
-{#                {{ form_end(projectAddForm) }}#}
+                {{ form(projectAddForm, {'method': 'POST', 'attr': {'id': projectAddForm.vars.id}}) }}
 
                 <button
                     class="save btn btn-primary rounded-5"
