--- a/app/templates/control-panel/project/edit.html.twig
+++ b/app/templates/control-panel/project/edit.html.twig
@@ -8,7 +8,18 @@
         <div class="row gx-5 justify-content-center">
             {% include 'control-panel/project/prompt-for-ai-usage.html.twig' %}
             <div class="col-md-8 col-lg-5">
-                <h1>{{ project.title }}</h1>
+
+                <a
+                    class="text-decoration-none text-black"
+                    href="{{ absolute_url(path('cp_project_show', {'project': project.id})) }}"
+                    title="view project"
+                >
+                    <h1>
+                        {{ project.title }}
+                        <svg class="bi bi-1"><use xlink:href="#box-arrow-up-right"/></svg>
+                    </h1>
+                </a>
+
                 {{ form(projectEditForm, {'method': 'POST', 'attr': {'id': projectEditForm.vars.id}}) }}
 
                 <button
