--- a/app/templates/control-panel/project/prompt-for-ai-usage.html.twig
+++ b/app/templates/control-panel/project/prompt-for-ai-usage.html.twig
@@ -1,5 +1,7 @@
 <div class="col-md-4 col-lg-4">
-    <h2>How Can I Use AI Helper Effectively?</h2>
+    <h2 class="text-decoration-none text-black">
+        How Can I Use AI Helper Effectively?
+    </h2>
     <p>
         To use AI helper effectively,
         provide as much information as possible about the product or service you want to promote,
