--- a/app/templates/landing-page/components/sections/footer/standard.html.twig
+++ b/app/templates/landing-page/components/sections/footer/standard.html.twig
@@ -8,9 +8,9 @@
             <a href="#" class="text-black">Contact Us</a>
         </p>
         <p>
-            <a href="#"><img src="{{ absolute_url(asset('social-icons/5279114_linkedin_network_social network_linkedin logo_icon.svg', 'img')) }}" alt="linkedin"></a>
-            <a href="#"><img src="{{ absolute_url(asset('social-icons/5279115_chat bubble_facebook_messenger_messenger logo_icon.png', 'img')) }}" alt="facebook"></a>
-            <a href="#"><img src="{{ absolute_url(asset('social-icons/5279120_play_video_youtube_youtuble logo_icon.png', 'img')) }}" alt="twitter"></a>
+            <a href="#"><img src="{{ absolute_url(asset('social-icons/linkedIn.png', 'img')) }}" alt="linkedin"></a>
+            <a href="#"><img src="{{ absolute_url(asset('social-icons/telegram.png', 'img')) }}" alt="telegram"></a>
+            <a href="#"><img src="{{ absolute_url(asset('social-icons/youtube.png', 'img')) }}" alt="youtube"></a>
         </p>
     </div>
 </footer>
